# sdl2-image

./: .gitignore  README.md  sdl2-image.cabal
.github/workflows/: cabal.yml  lint.yml
example/: Example.hs
src/SDL/: Image.hs
src/SDL/Raw/: Helper.hs  Image.hsc
